samples/_failures_safe/1761149197_5d15c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3df07e1c.c: In function ‘main’:
./samples/SAFE/__tmp_3df07e1c.c:158:28: error: expected ‘)’ at end of input
  158 |         free_matrix(&result
      |                    ~       ^
      |                            )
./samples/SAFE/__tmp_3df07e1c.c:158:9: error: expected declaration or statement at end of input
  158 |         free_matrix(&result
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_3df07e1c.c:158:9: error: expected declaration or statement at end of input
